# uDAQ

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROOT_PACKAGE_INDEX.md  SECURITY.md
ACTIVE/: .gitignore  .pre-commit-config.yaml  ACCEPTANCE_TEST_PLAN.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  FEATURE_INVENTORY.md  KNOWN_LIMITATIONS.md  PACKAGE_MANIFEST.md  README.md  README_START_HERE.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  RUN_DIAGNOSTICS.bat  RUN_UDAQ.bat  WORKPLAN_CURRENT_RUN.md  pyproject.toml
ACTIVE/config/: package_metadata.json
ACTIVE/proof/: 20260325_00_sprint-3c-startup-open-diagnostic-correction__execution-plan.md  20260325_00_sprint-3c-startup-open-diagnostic-correction__reference-specimen.md  20260325_00_sprint-3c-startup-open-diagnostic-correction__scope-boundary.md  20260325_00_sprint-3c-startup-open-diagnostic-correction__touched-file-ledger.md  20260325_00_sprint-3c-startup-open-diagnostic-correction__truncation-guard-report.json  20260325_00_sprint-3c-startup-open-diagnostic-correction__validation-status.txt  20260325_03_sprint-3d-direct-open-probe-and-handoff-correction__correction-summary.md  20260325_03_sprint-3d-direct-open-probe-and-handoff-correction__documentation-integrity-report.md  20260325_03_sprint-3d-direct-open-probe-and-handoff-correction__scope-boundary.md  20260325_03_sprint-3d-direct-open-probe-and-handoff-correction__truncation-guard-report.json  20260325_03_sprint-3d-direct-open-probe-and-handoff-correction__validation-status.txt  20260325_06_reconnect-path-alignment-correction__baseline-file-snapshot.json  20260325_06_reconnect-path-alignment-correction__documentation-integrity-report.md  20260325_06_reconnect-path-alignment-correction__execution-plan.md  20260325_06_reconnect-path-alignment-correction__reference-specimens.md  20260325_06_reconnect-path-alignment-correction__scope-boundary.md  20260325_06_reconnect-path-alignment-correction__touched-file-ledger.md  20260325_06_reconnect-path-alignment-correction__truncation-guard-report.json  20260325_07_reconnect-reacquire-path-verification-and-fix__baseline-file-snapshot.json  20260325_07_reconnect-reacquire-path-verification-and-fix__correction-summary.md  20260325_07_reconnect-reacquire-path-verification-and-fix__document-completeness-check.json  20260325_07_reconnect-reacquire-path-verification-and-fix__documentation-integrity-report.md  20260325_07_reconnect-reacquire-path-verification-and-fix__reference-specimens.md  20260325_07_reconnect-reacquire-path-verification-and-fix__scope-boundary.md  20260325_07_reconnect-reacquire-path-verification-and-fix__touched-file-ledger.md  20260325_07_reconnect-reacquire-path-verification-and-fix__validation-status.txt  20260325_08_reconnect-hardening-and-external-review-prep__document-classification-matrix.md  20260325_08_reconnect-hardening-and-external-review-prep__document-classification-standard.md  20260325_08_reconnect-hardening-and-external-review-prep__legacy-status-migration-map.md  20260325_08_reconnect-hardening-and-external-review-prep__main-app-value-of-lane.md  20260325_08_reconnect-hardening-and-external-review-prep__pass-a-hardening-summary.md  20260325_08_reconnect-hardening-and-external-review-prep__pass-a-reference-specimens.md  20260325_08_reconnect-hardening-and-external-review-prep__pass-a-scope-boundary.md  20260325_08_reconnect-hardening-and-external-review-prep__pass-b-authoritative-inputs.md  20260325_08_reconnect-hardening-and-external-review-prep__pass-b-documentation-integrity-report.md  20260325_08_reconnect-hardening-and-external-review-prep__pass-b-validation-status.txt  (+74 more)
(+1486 files in other folders)
